Fixed non-wrapping label. #549

--- a/srophe-app/resources/css/main.css
+++ b/srophe-app/resources/css/main.css
@@ -330,7 +330,7 @@ td {
 .caption{text-align:center; font-size:.75em;color:grey;}
 .funding {margin:1em;}
 .no-logo {font-size:1.25em; font-weight:600; font-family:serif; color:#333; margin:1em;}
-.badge {white-space: normal;}
+.label, .badge {white-space: normal;}
 .about-tables td {
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc; 
